@@ -2,8 +2,10 @@ package com.chicu.aibot.exchange.bybit;
 
 import com.chicu.aibot.exchange.client.ExchangeClient;
 import com.chicu.aibot.exchange.enums.NetworkType;
+import com.chicu.aibot.exchange.enums.OrderSide;
 import com.chicu.aibot.exchange.model.*;
 import com.chicu.aibot.exchange.util.HmacUtil;
+import com.chicu.aibot.strategy.model.Candle;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
@@ -14,87 +16,187 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 
 @Slf4j
 @Component("BYBIT")
 @RequiredArgsConstructor
 public class BybitExchangeClient implements ExchangeClient {
 
-    @Value("${bybit.api.mainnet-base-url}")
+    @Value("${bybit.api.mainnet-base-url:https://api.bybit.com}")
     private String mainnetBaseUrl;
 
-    @Value("${bybit.api.testnet-base-url}")
+    @Value("${bybit.api.testnet-base-url:https://api-testnet.bybit.com}")
     private String testnetBaseUrl;
+
+    private static final String RECV_WINDOW = "5000";
 
     private final RestTemplate rest;
     private final ObjectMapper objectMapper;
 
+    /* ====================== helpers ====================== */
+
     private String baseUrl(NetworkType network) {
-        return (network == NetworkType.MAINNET ? mainnetBaseUrl : testnetBaseUrl)
-                .replaceAll("/+$", "");
+        String b = (network == NetworkType.MAINNET ? mainnetBaseUrl : testnetBaseUrl);
+        return b.replaceAll("/+$", "");
     }
 
-    private String buildQuery(long ts, String apiKey, String recvWindow) {
-        return String.format("accountType=UNIFIED&recvWindow=%s&timestamp=%d", recvWindow, ts);
+    private static String enc(String v) {
+        return URLEncoder.encode(v, StandardCharsets.UTF_8);
     }
 
-    private HttpHeaders buildHeaders(String apiKey, String signature, long ts, String recvWindow) {
-        HttpHeaders headers = new HttpHeaders();
-        headers.set("X-BAPI-API-KEY", apiKey);
-        headers.set("X-BAPI-SIGN", signature);
-        headers.set("X-BAPI-TIMESTAMP", String.valueOf(ts));
-        headers.set("X-BAPI-RECV-WINDOW", recvWindow);
-        return headers;
+    private JsonNode parseJson(String body) {
+        try {
+            return objectMapper.readTree(body);
+        } catch (Exception e) {
+            throw new RuntimeException("JSON parse error: " + e.getMessage(), e);
+        }
     }
+
+    /** Общая сборка заголовков для подписанных запросов (payload = queryString для GET или bodyJson для POST). */
+    private HttpHeaders signedHeaders(String apiKey, String secretKey, long ts, String payload) {
+        String preSign = ts + apiKey + RECV_WINDOW + (payload == null ? "" : payload);
+        String sign = HmacUtil.sha256Hex(secretKey, preSign);
+
+        HttpHeaders h = new HttpHeaders();
+        h.set("X-BAPI-API-KEY", apiKey);
+        h.set("X-BAPI-TIMESTAMP", String.valueOf(ts));
+        h.set("X-BAPI-RECV-WINDOW", RECV_WINDOW);
+        h.set("X-BAPI-SIGN", sign);
+        h.setContentType(MediaType.APPLICATION_JSON);
+        return h;
+    }
+
+    /** Подписанный GET (payload = queryString). Ключи берутся из thread-local. */
+    private JsonNode signedGet(String fullUrl) {
+        int i = fullUrl.indexOf('?');
+        String query = (i >= 0 && i < fullUrl.length() - 1) ? fullUrl.substring(i + 1) : "";
+        long ts = System.currentTimeMillis();
+
+        HttpHeaders headers = signedHeaders(
+                currentApiKey.get(),
+                currentSecretKey.get(),
+                ts,
+                query
+        );
+
+        ResponseEntity<String> r = rest.exchange(fullUrl, HttpMethod.GET, new HttpEntity<>(headers), String.class);
+        return parseJson(r.getBody());
+    }
+
+    /** Подписанный POST (payload = JSON-строка). */
+    private JsonNode signedPost(String fullUrl, Map<String, Object> body, String apiKey, String secretKey) {
+        try {
+            String bodyJson = objectMapper.writeValueAsString(body);
+            long ts = System.currentTimeMillis();
+            HttpHeaders headers = signedHeaders(apiKey, secretKey, ts, bodyJson);
+            ResponseEntity<String> r = rest.exchange(fullUrl, HttpMethod.POST, new HttpEntity<>(bodyJson, headers), String.class);
+            return parseJson(r.getBody());
+        } catch (Exception ex) {
+            log.error("❌ Bybit signed POST failed: {}", ex.getMessage());
+            throw new RuntimeException("Bybit signed request failed", ex);
+        }
+    }
+
+    /* ====================== symbol filters cache ====================== */
+
+    private record SymbolFilters(
+            BigDecimal tickSize,
+            BigDecimal qtyStep,
+            BigDecimal minOrderQty
+    ) {}
+
+    private final ConcurrentMap<String, SymbolFilters> filtersCache = new ConcurrentHashMap<>();
+
+    private String fKey(NetworkType n, String symbol) {
+        return n.name() + ":" + symbol;
+    }
+
+    private SymbolFilters getFilters(NetworkType network, String symbol) {
+        return filtersCache.computeIfAbsent(fKey(network, symbol), k -> fetchFilters(network, symbol));
+    }
+
+    private SymbolFilters fetchFilters(NetworkType network, String symbol) {
+        try {
+            String url = baseUrl(network) + "/v5/market/instruments-info?category=spot&symbol=" + enc(symbol);
+            JsonNode list = parseJson(rest.getForObject(url, String.class))
+                    .path("result").path("list");
+            if (!list.isArray() || list.isEmpty()) {
+                throw new IllegalStateException("Empty instruments-info for " + symbol);
+            }
+            JsonNode info = list.get(0);
+            BigDecimal tickSize    = new BigDecimal(info.path("priceFilter").path("tickSize").asText("0"));
+            BigDecimal qtyStep     = new BigDecimal(info.path("lotSizeFilter").path("qtyStep").asText("0"));
+            BigDecimal minOrderQty = new BigDecimal(info.path("lotSizeFilter").path("minOrderQty").asText("0"));
+            return new SymbolFilters(tickSize, qtyStep, minOrderQty);
+        } catch (Exception e) {
+            log.warn("Bybit instruments-info fetch failed for {}: {}", symbol, e.getMessage());
+            return new SymbolFilters(null, null, null);
+        }
+    }
+
+    private static BigDecimal quantize(BigDecimal value, BigDecimal step) {
+        if (value == null || step == null || step.signum() == 0) return value;
+        BigDecimal[] div = value.divideAndRemainder(step);
+        BigDecimal floored = div[0].multiply(step);
+        int scale = Math.max(0, step.stripTrailingZeros().scale());
+        return floored.setScale(scale, RoundingMode.DOWN).stripTrailingZeros();
+    }
+
+    /* ====================== Thread-local API keys (для signedGet) ====================== */
+    private final ThreadLocal<String> currentApiKey    = new ThreadLocal<>();
+    private final ThreadLocal<String> currentSecretKey = new ThreadLocal<>();
+
+    /* ====================== ExchangeClient ====================== */
 
     @Override
     public boolean testConnection(String apiKey, String secretKey, NetworkType networkType) {
-        String endpoint = "/v5/account/wallet-balance";
-        String recvWindow = "5000";
-        long ts = Instant.now().toEpochMilli();
-        String query = buildQuery(ts, apiKey, recvWindow);
-        String toSign = ts + apiKey + recvWindow + query;
-        String signature = HmacUtil.sha256Hex(secretKey, toSign);
-
-        String url = baseUrl(networkType) + endpoint + "?" + query;
-        HttpEntity<Void> request = new HttpEntity<>(buildHeaders(apiKey, signature, ts, recvWindow));
         try {
-            ResponseEntity<String> resp = rest.exchange(url, HttpMethod.GET, request, String.class);
-            JsonNode root = objectMapper.readTree(resp.getBody());
-            return resp.getStatusCode() == HttpStatus.OK && root.path("retCode").asInt() == 0;
-        } catch (Exception ex) {
-            log.warn("Bybit testConnection failed: {}", ex.getMessage());
+            String url = baseUrl(networkType) + "/v5/account/wallet-balance?accountType=UNIFIED";
+            currentApiKey.set(apiKey);
+            currentSecretKey.set(secretKey);
+            try {
+                JsonNode root = signedGet(url);
+                return root.path("retCode").asInt(-1) == 0;
+            } finally {
+                currentApiKey.remove();
+                currentSecretKey.remove();
+            }
+        } catch (Exception e) {
+            log.warn("Bybit testConnection failed: {}", e.getMessage());
             return false;
         }
     }
 
     @Override
     public AccountInfo fetchAccountInfo(String apiKey, String secretKey, NetworkType networkType) {
-        String endpoint = "/v5/account/wallet-balance";
-        String recvWindow = "5000";
-        long ts = Instant.now().toEpochMilli();
-        String query = buildQuery(ts, apiKey, recvWindow);
-        String signature = HmacUtil.sha256Hex(secretKey, ts + apiKey + recvWindow + query);
-
-        String url = baseUrl(networkType) + endpoint + "?" + query;
-        HttpEntity<Void> request = new HttpEntity<>(buildHeaders(apiKey, signature, ts, recvWindow));
         try {
-            JsonNode list = objectMapper
-                    .readTree(rest.exchange(url, HttpMethod.GET, request, String.class).getBody())
-                    .path("result")
-                    .path("list");
-            List<Balance> balances = new ArrayList<>();
-            for (JsonNode b : list) {
-                balances.add(Balance.builder()
-                        .asset(b.path("coin").asText())
-                        .free(b.path("free").decimalValue())
-                        .locked(b.path("locked").decimalValue())
-                        .build());
+            String url = baseUrl(networkType) + "/v5/account/wallet-balance?accountType=UNIFIED";
+            currentApiKey.set(apiKey);
+            currentSecretKey.set(secretKey);
+            try {
+                JsonNode list = signedGet(url).path("result").path("list");
+                List<Balance> balances = new ArrayList<>();
+                for (JsonNode acc : list) {
+                    for (JsonNode c : acc.path("coin")) {
+                        balances.add(Balance.builder()
+                                .asset(c.path("coin").asText())
+                                .free(new BigDecimal(c.path("availableToWithdraw").asText("0")))
+                                .locked(new BigDecimal(c.path("locked").asText("0")))
+                                .build());
+                    }
+                }
+                return AccountInfo.builder().balances(balances).build();
+            } finally {
+                currentApiKey.remove();
+                currentSecretKey.remove();
             }
-            return AccountInfo.builder().balances(balances).build();
         } catch (Exception ex) {
             log.error("Bybit fetchAccountInfo failed: {}", ex.getMessage(), ex);
             throw new RuntimeException("Failed to fetch Bybit account info", ex);
@@ -102,50 +204,171 @@ public class BybitExchangeClient implements ExchangeClient {
     }
 
     @Override
-    public OrderResponse placeOrder(String apiKey, String secretKey, NetworkType networkType, OrderRequest req) {
-        String endpoint = "/v5/order/create";
-        String recvWindow = "5000";
-        long ts = Instant.now().toEpochMilli();
-
-        StringBuilder q = new StringBuilder()
-                .append("apiKey=").append(apiKey)
-                .append("&side=").append(req.getSide())
-                .append("&symbol=").append(req.getSymbol())
-                .append("&type=").append(req.getType())
-                .append("&qty=").append(req.getQuantity())
-                .append("&recvWindow=").append(recvWindow)
-                .append("&timestamp=").append(ts);
-        if (req.getPrice() != null) {
-            q.append("&price=").append(req.getPrice());
-        }
-        String signature = HmacUtil.sha256Hex(secretKey, ts + apiKey + recvWindow + q);
-        String url = baseUrl(networkType) + endpoint + "?" + q + "&sign=" + signature;
-
+    public OrderResponse placeOrder(String apiKey, String secretKey, NetworkType network, OrderRequest req) {
         try {
-            JsonNode result = objectMapper
-                    .readTree(rest.postForObject(url, null, String.class))
-                    .path("result");
+            SymbolFilters f = getFilters(network, req.getSymbol());
+
+            BigDecimal qtyNorm = quantize(req.getQuantity(), f.qtyStep());
+            if (qtyNorm == null || qtyNorm.signum() == 0) {
+                throw new IllegalArgumentException("Quantity is zero after quantize");
+            }
+            if (f.minOrderQty() != null && qtyNorm.compareTo(f.minOrderQty()) < 0) {
+                throw new IllegalArgumentException("Quantity is below minOrderQty");
+            }
+
+            Map<String, Object> body = new LinkedHashMap<>();
+            body.put("category", "spot");
+            body.put("symbol", req.getSymbol());
+            body.put("side", req.getSide() == OrderSide.BUY ? "Buy" : "Sell"); // Bybit формат
+            body.put("orderType", req.getType().name()); // LIMIT / MARKET
+            body.put("qty", qtyNorm.stripTrailingZeros().toPlainString());
+
+            if (req.getType().name().equals("LIMIT")) {
+                BigDecimal priceNorm = quantize(req.getPrice(), f.tickSize());
+                if (priceNorm == null || priceNorm.signum() == 0) {
+                    throw new IllegalArgumentException("Price is zero after quantize");
+                }
+                body.put("price", priceNorm.stripTrailingZeros().toPlainString());
+                body.put("timeInForce", "GTC");
+            }
+
+            String url = baseUrl(network) + "/v5/order/create";
+            JsonNode result = signedPost(url, body, apiKey, secretKey);
+            JsonNode r = result.path("result");
+
             return OrderResponse.builder()
-                    .orderId(result.path("orderId").asText())
-                    .symbol(result.path("symbol").asText())
-                    .status(result.path("orderStatus").asText())
-                    .executedQty(result.path("cumExecQty").decimalValue())
-                    .transactTime(Instant.ofEpochMilli(result.path("createTimeMs").asLong()))
+                    .orderId(r.path("orderId").asText(null))
+                    .symbol(r.path("symbol").asText(req.getSymbol()))
+                    .status(r.path("orderStatus").asText("NEW"))
+                    .executedQty(new BigDecimal(r.path("cumExecQty").asText("0")))
+                    .transactTime(Instant.ofEpochMilli(r.path("createTime").asLong(System.currentTimeMillis())))
                     .build();
         } catch (Exception ex) {
-            log.error("Bybit placeOrder failed: {}", ex.getMessage(), ex);
+            log.error("❌ Bybit placeOrder failed: {}", ex.getMessage(), ex);
             throw new RuntimeException("Failed to place Bybit order", ex);
         }
     }
 
-    // Вспомогательный метод: получить все тикеры категории spot
-    private List<JsonNode> fetchSpotTickers() {
-        String url = baseUrl(NetworkType.MAINNET) + "/v5/market/tickers?category=spot";
+    /* ===== NEW: отмена ордера ===== */
+    @Override
+    public boolean cancelOrder(String apiKey, String secretKey, NetworkType network, String symbol, String orderId) {
         try {
-            JsonNode list = objectMapper
-                    .readTree(rest.getForObject(url, String.class))
-                    .path("result")
-                    .path("list");
+            Map<String,Object> body = new LinkedHashMap<>();
+            body.put("category", "spot");
+            body.put("symbol", symbol);
+            body.put("orderId", orderId);
+
+            String url = baseUrl(network) + "/v5/order/cancel";
+            JsonNode root = signedPost(url, body, apiKey, secretKey);
+            int ret = root.path("retCode").asInt(-1);
+            if (ret != 0) {
+                log.warn("Bybit cancelOrder retCode={}, msg={}", ret, root.path("retMsg").asText());
+            }
+            return ret == 0;
+        } catch (Exception ex) {
+            log.error("❌ Bybit cancelOrder failed: {}", ex.getMessage(), ex);
+            return false;
+        }
+    }
+
+    /* ===== NEW: открытые ордера ===== */
+    @Override
+    public List<OrderInfo> fetchOpenOrders(String apiKey, String secretKey, NetworkType network, String symbol) {
+        List<OrderInfo> out = new ArrayList<>();
+        String url = baseUrl(network) + "/v5/order/realtime?category=spot"
+                + (symbol != null && !symbol.isBlank() ? "&symbol=" + enc(symbol) : "");
+
+        currentApiKey.set(apiKey);
+        currentSecretKey.set(secretKey);
+        try {
+            JsonNode list = signedGet(url).path("result").path("list");
+            if (list.isArray()) {
+                for (JsonNode n : list) out.add(toInfo(n));
+            }
+        } catch (Exception ex) {
+            log.warn("Bybit fetchOpenOrders error: {}", ex.getMessage());
+        } finally {
+            currentApiKey.remove();
+            currentSecretKey.remove();
+        }
+        return out;
+    }
+
+    /* ===== NEW: статус конкретного ордера (realtime -> history fallback) ===== */
+    @Override
+    public Optional<OrderInfo> fetchOrder(String apiKey, String secretKey, NetworkType network,
+                                                  String symbol, String orderId) {
+        // 1) пробуем realtime
+        String rt = baseUrl(network) + "/v5/order/realtime?category=spot"
+                + "&symbol=" + enc(symbol) + "&orderId=" + enc(orderId);
+
+        currentApiKey.set(apiKey);
+        currentSecretKey.set(secretKey);
+        try {
+            JsonNode list = signedGet(rt).path("result").path("list");
+            if (list.isArray() && !list.isEmpty()) {
+                return Optional.of(toInfo(list.get(0)));
+            }
+        } catch (Exception ex) {
+            log.debug("Bybit fetchOrder realtime miss: {}", ex.getMessage());
+        } finally {
+            currentApiKey.remove();
+            currentSecretKey.remove();
+        }
+
+        // 2) если в открытых нет — берём историю
+        String hist = baseUrl(network) + "/v5/order/history?category=spot"
+                + "&symbol=" + enc(symbol) + "&orderId=" + enc(orderId);
+
+        currentApiKey.set(apiKey);
+        currentSecretKey.set(secretKey);
+        try {
+            JsonNode list = signedGet(hist).path("result").path("list");
+            if (list.isArray() && !list.isEmpty()) {
+                return Optional.of(toInfo(list.get(0)));
+            }
+        } catch (Exception ex) {
+            log.warn("Bybit fetchOrder history error: {}", ex.getMessage());
+        } finally {
+            currentApiKey.remove();
+            currentSecretKey.remove();
+        }
+
+        return Optional.empty();
+    }
+
+    private OrderInfo toInfo(JsonNode n) {
+        String status = n.path("orderStatus").asText("");           // New / PartiallyFilled / Filled / Cancelled ...
+        String sideStr = n.path("side").asText("Buy");
+        OrderSide side = "Buy".equalsIgnoreCase(sideStr) ? OrderSide.BUY : OrderSide.SELL;
+
+        BigDecimal price = BigDecimal.ZERO;
+        if (n.hasNonNull("price")) {
+            String p = n.path("price").asText("0");
+            if (!"".equals(p)) price = new BigDecimal(p);
+        }
+        BigDecimal exec = BigDecimal.ZERO;
+        if (n.hasNonNull("cumExecQty")) {
+            String q = n.path("cumExecQty").asText("0");
+            if (!"".equals(q)) exec = new BigDecimal(q);
+        }
+
+        return OrderInfo.builder()
+                .orderId(n.path("orderId").asText(null))
+                .symbol(n.path("symbol").asText(null))
+                .side(side)
+                .status(status.toUpperCase(Locale.ROOT)) // нормализуем под общий стиль
+                .price(price)
+                .executedQty(exec)
+                .build();
+    }
+
+    // ===== tickers (mainnet) =====
+
+    private List<JsonNode> fetchSpotTickers() {
+        try {
+            String url = baseUrl(NetworkType.MAINNET) + "/v5/market/tickers?category=spot";
+            JsonNode list = parseJson(rest.getForObject(url, String.class)).path("result").path("list");
             List<JsonNode> nodes = new ArrayList<>();
             list.forEach(nodes::add);
             return nodes;
@@ -157,59 +380,51 @@ public class BybitExchangeClient implements ExchangeClient {
 
     @Override
     public List<String> fetchPopularSymbols() {
-        // просто все spot-символы
         return fetchSpotTickers().stream()
                 .map(n -> n.path("symbol").asText())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<String> fetchGainers() {
         return fetchSpotTickers().stream()
-                // price24hPcnt в формате строка, например "0.1234"
                 .sorted(Comparator.comparingDouble(n ->
-                        -Double.parseDouble(n.path("price24hPcnt").asText())))
+                        -Double.parseDouble(n.path("price24hPcnt").asText("0"))))
                 .map(n -> n.path("symbol").asText())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<String> fetchLosers() {
         return fetchSpotTickers().stream()
                 .sorted(Comparator.comparingDouble(n ->
-                        Double.parseDouble(n.path("price24hPcnt").asText())))
+                        Double.parseDouble(n.path("price24hPcnt").asText("0"))))
                 .map(n -> n.path("symbol").asText())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<String> fetchByVolume() {
         return fetchSpotTickers().stream()
-                // turnover24h — объём торгов за 24ч
                 .sorted(Comparator.comparingDouble(n ->
-                        -Double.parseDouble(n.path("turnover24h").asText())))
+                        -Double.parseDouble(n.path("turnover24h").asText("0"))))
                 .map(n -> n.path("symbol").asText())
-                .collect(Collectors.toList());
+                .toList();
     }
-    // src/main/java/com/chicu/aibot/exchange/bybit/BybitExchangeClient.java
+
     @Override
     public TickerInfo getTicker(String symbol, NetworkType networkType) {
-        String base       = baseUrl(networkType);
-        String endpoint   = "/v5/market/tickers";
-        String url        = String.format("%s%s?symbol=%s", base, endpoint, symbol);
-
         try {
+            String url = baseUrl(networkType) + "/v5/market/tickers?category=spot&symbol=" + enc(symbol);
             ResponseEntity<String> resp = rest.exchange(url, HttpMethod.GET,
                     new HttpEntity<>(new HttpHeaders()), String.class);
-            JsonNode list = objectMapper.readTree(resp.getBody())
-                    .path("result")
-                    .path("list");
+            JsonNode list = parseJson(resp.getBody()).path("result").path("list");
             if (!list.isArray() || list.isEmpty()) {
                 throw new RuntimeException("Empty ticker list for " + symbol);
             }
             JsonNode info = list.get(0);
-            BigDecimal price    = new BigDecimal(info.path("lastPrice").asText());
-            BigDecimal changePct= new BigDecimal(info.path("price24hP").asText());
+            BigDecimal price     = new BigDecimal(info.path("lastPrice").asText("0"));
+            BigDecimal changePct = new BigDecimal(info.path("price24hPcnt").asText("0"));
             return TickerInfo.builder()
                     .price(price)
                     .changePct(changePct)
@@ -220,4 +435,134 @@ public class BybitExchangeClient implements ExchangeClient {
         }
     }
 
+    @Override
+    public List<Candle> fetchCandles(String apiKey, String secretKey, NetworkType network,
+                                     String symbol, String interval, int limit) {
+        try {
+            String bybitInterval = mapInterval(interval); // "1m"->"1", "1h"->"60", "1d"->"D"
+            String url = baseUrl(network) + "/v5/market/kline?category=spot"
+                    + "&symbol=" + enc(symbol)
+                    + "&interval=" + enc(bybitInterval)
+                    + "&limit=" + limit;
+
+            JsonNode list = parseJson(rest.getForObject(url, String.class))
+                    .path("result").path("list");
+            List<Candle> candles = new ArrayList<>();
+            for (JsonNode n : list) {
+                Instant openTime = Instant.ofEpochMilli(n.get(0).asLong());
+                BigDecimal open  = new BigDecimal(n.get(1).asText("0"));
+                BigDecimal high  = new BigDecimal(n.get(2).asText("0"));
+                BigDecimal low   = new BigDecimal(n.get(3).asText("0"));
+                BigDecimal close = new BigDecimal(n.get(4).asText("0"));
+                BigDecimal vol   = new BigDecimal(n.get(5).asText("0"));
+                candles.add(new Candle(symbol, openTime, open, high, low, close, vol));
+            }
+            candles.sort(Comparator.comparing(Candle::getOpenTime));
+            return candles;
+        } catch (Exception ex) {
+            log.error("Ошибка Bybit fetchCandles для {} {}: {}", symbol, interval, ex.getMessage(), ex);
+            return Collections.emptyList();
+        }
+    }
+
+    /* ====================== timeframe map ====================== */
+
+    private String mapInterval(String tfRaw) {
+        if (tfRaw == null || tfRaw.isBlank()) return "1";
+        String tf = tfRaw.trim().toLowerCase();
+        if (tf.endsWith("m")) {
+            return tf.substring(0, tf.length() - 1); // "1m"->"1", "15m"->"15"
+        }
+        if (tf.endsWith("h")) {
+            long h = Long.parseLong(tf.substring(0, tf.length() - 1));
+            return String.valueOf(h * 60); // "1h"->"60", "4h"->"240"
+        }
+        if (tf.endsWith("d")) return "D";
+        if (tf.endsWith("w")) return "W";
+        if (tf.endsWith("mo") || tf.endsWith("mon") || tf.endsWith("month")) return "M";
+        return tf;
+    }
+
+    /** Преобразование ответа Bybit в наш OrderInfo */
+    private OrderInfo toOrderInfo(JsonNode n) {
+        BigDecimal executed = BigDecimal.ZERO;
+        if (n.hasNonNull("cumExecQty")) {
+            String q = n.path("cumExecQty").asText("0");
+            if (!q.isEmpty()) executed = new BigDecimal(q);
+        }
+        return OrderInfo.builder()
+                .orderId(n.path("orderId").asText(null))
+                .symbol(n.path("symbol").asText(null))
+                .status(n.path("orderStatus").asText("").toUpperCase(Locale.ROOT)) // New->NEW, Filled->FILLED...
+                .executedQty(executed)
+                .build();
+    }
+
+    /** Реализация абстрактного метода интерфейса: статус конкретного ордера */
+    @Override
+    public OrderInfo getOrder(String apiKey, String secretKey,
+                              NetworkType networkType, String symbol, String orderId) {
+        // 1) пробуем "realtime" (открытые/активные)
+        String rt = baseUrl(networkType) + "/v5/order/realtime?category=spot"
+                + "&symbol=" + enc(symbol) + "&orderId=" + enc(orderId);
+
+        currentApiKey.set(apiKey);
+        currentSecretKey.set(secretKey);
+        try {
+            JsonNode list = signedGet(rt).path("result").path("list");
+            if (list.isArray() && !list.isEmpty()) {
+                return toOrderInfo(list.get(0));
+            }
+        } catch (Exception ignore) {
+            // пойдём в историю
+        } finally {
+            currentApiKey.remove();
+            currentSecretKey.remove();
+        }
+
+        // 2) если в realtime нет — смотрим историю
+        String hist = baseUrl(networkType) + "/v5/order/history?category=spot"
+                + "&symbol=" + enc(symbol) + "&orderId=" + enc(orderId);
+
+        currentApiKey.set(apiKey);
+        currentSecretKey.set(secretKey);
+        try {
+            JsonNode list = signedGet(hist).path("result").path("list");
+            if (list.isArray() && !list.isEmpty()) {
+                return toOrderInfo(list.get(0));
+            }
+        } catch (Exception e) {
+            log.warn("Bybit getOrder history error: {}", e.getMessage());
+        } finally {
+            currentApiKey.remove();
+            currentSecretKey.remove();
+        }
+
+        return null; // не нашли
+    }
+
+    /** Открытые ордера по символу — под сигнатуру интерфейса */
+    @Override
+    public List<OrderInfo> getOpenOrders(String apiKey, String secretKey,
+                                         NetworkType networkType, String symbol) {
+        String url = baseUrl(networkType) + "/v5/order/realtime?category=spot"
+                + (symbol != null && !symbol.isBlank() ? "&symbol=" + enc(symbol) : "");
+
+        currentApiKey.set(apiKey);
+        currentSecretKey.set(secretKey);
+        try {
+            JsonNode list = signedGet(url).path("result").path("list");
+            List<OrderInfo> out = new ArrayList<>();
+            if (list.isArray()) {
+                for (JsonNode n : list) out.add(toOrderInfo(n));
+            }
+            return out;
+        } catch (Exception e) {
+            log.warn("Bybit getOpenOrders error: {}", e.getMessage());
+            return List.of();
+        } finally {
+            currentApiKey.remove();
+            currentSecretKey.remove();
+        }
+    }
 }
